# ratag

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: asf.rs  basic_tag.rs  check_files.rs  flac.rs  id3v1.rs  id3v2.rs  mp4.rs  picture.rs  riff_wave.rs
formats/: asf.md  asf.txt
src/: basic_tag.rs  data_type.rs  err.rs  lib.rs  parsers.rs  picture.rs  picture_kind.rs  picture_tag.rs  tag_read.rs  tag_store.rs
src/asf/: guid.rs  mod.rs  object.rs
src/bread/: breadable.rs  breadable_be.rs  breadable_le.rs  mod.rs
src/containers/: comment.rs  mod.rs  popularimeter.rs  rating.rs  tag_type.rs
src/flac/: metadata_block_header.rs  mod.rs  streaminfo.rs
src/id3/: genres.rs  mod.rs  v1.rs
src/id3/v1/: id3v1.rs  id3v1_tag.rs  mod.rs
src/id3/v2/: frame.rs  frame34.rs  header.rs  id3v2.rs  mod.rs
src/id3/v2/v2_2/: frame.rs  frame_header.rs  mod.rs  picture_header.rs
src/id3/v2/v2_3/: frame_header.rs  mod.rs
src/id3/v2/v2_4/: frame_header.rs  mod.rs
src/mp4/: boxtype.rs  full_box.rs  mod.rs  mp4_box.rs  opt_u64.rs
src/riff/: chunk.rs  chunk_header.rs  mod.rs  wave_fmt.rs
src/tag/: basic.rs  mod.rs  picture.rs  probe.rs
src/trap/: mod.rs  skip.rs  warn.rs
src/vorbis/: mod.rs  vorbis_tag.rs
