[package]
name = "ratag"
version = "0.1.1"
edition = "2024"
authors = ["Jakub Antonín Štigler"]
description = "Simple, fast and reliable audio tag reader."
readme = "README.md"
repository = "https://github.com/BonnyAD9/ratag"
license = "GPL-3.0"
keywords = ["audio", "tags", "id3", "flac"]

[dependencies]
bitflags = "2.10.0"
encoding = "0.2.33"
thiserror = "2.0.18"